# flume

./: .gitignore  README.md  docker-compose.yml  openapi.json  package-lock.json  package.json  pyproject.toml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/celery/: celery.py  celery_config.py  task.py
backend/celery_app/: celery.py  celery_config.py  download.py  email.py  orchestrator.py  task.py  utils.py  webhook.py
backend/migrations/: env.py
backend/migrations/versions/: 16c0b99efaab_add_output_column_to_the_job_table.py  186ed28b5af5_add_jobs_and_job_steps_tables.py  1997a768a6ff_add_platforms_table.py  1d9954616d8a_add_password_hash_and_is_admin_columns_.py  26b29365094c_add_webhook_subscription_and_delivery_.py  4ce71f063bba_deleted_at_column_in_basemodel_timezone_.py  833c2058db7d_added_content_type_and_etag_columns_to_.py  a2a650a06036_add_key_prefix_column_to_api_key_table.py  bcaf878d49ec_add_source_metadata_parent_job_id_and_.py  c39e8cb08d5e_selection_columns_to_jobs_table.py  ea3ad4859918_entry_index_columns_to_jobs_table.py
backend/observability/: grafana-datasources.yaml  loki.yaml  otel-collector.yaml  prometheus.yaml
backend/observablity/: tempo.yml
backend/src/: main.py
backend/src/auth/: route.py  schema.py  service.py
backend/src/core/: dependency.py  email_service.py  exception_base.py
backend/src/model/: __init__.py  api.py  base.py  event.py  job.py  platform.py  upload.py  user.py
backend/src/public/: route.py
backend/src/route/: api.py  auth.py  job.py  platform.py  upload.py  utils.py  webhook.py
backend/src/schema/: __init__.py  api.py  artifact.py  download.py  event.py  job.py  platform.py  response.py  upload.py  user.py
backend/src/service/: api.py  downloader.py  events.py  google.py  jobs.py  platform.py  processor.py  storage.py  upload.py  user.py  util.py  validation.py
backend/src/utils/: config.py  crypto.py  db.py  exception.py  http_client.py  log.py  redis.py  registry.py  response.py  telemetry.py
(+212 files in other folders)
