[project]
name = "flume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all]>=0.136.1",
    "opentelemetry-distro>=0.62b1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-instrumentation-celery>=0.62b1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-instrumentation-httpx>=0.62b1",
    "opentelemetry-instrumentation-logging>=0.62b1",
    "opentelemetry-instrumentation-redis>=0.62b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.62b1",
    "python-telegram-bot>=22.7",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "yt-dlp[default]>=2026.3.17",
]
