[project]
name = "flume"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all]>=0.136.1",
    "opentelemetry-distro>=0.62b1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-instrumentation-celery>=0.62b1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-instrumentation-httpx>=0.62b1",
    "opentelemetry-instrumentation-logging>=0.62b1",
    "opentelemetry-instrumentation-redis>=0.62b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.62b1",
    "python-telegram-bot>=22.7",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "yt-dlp[default]>=2026.3.17",
    "asyncpg>=0.30.0",
    "google-adk>=1.15.1",
    "google-api-python-client>=2.184.0",
    "google-auth>=2.41.1",
    "google-auth-oauthlib>=1.2.2",
    "google-generativeai>=0.8.5",
    "litellm>=1.77.7",
    "phonenumbers>=9.0.16",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.9.1",
    "redis>=6.4.0",
    "twilio>=9.6.1",
    "celery>=5.6.3",
    "bcrypt>=5.0.0",
    "resend[async]>=2.30.1",
    "jinja2>=3.1.0",
    "flower>=2.0.1",
    "alembic>=1.18.4",
    "scalar-fastapi>=1.1.0",
]
